[package]
name = "milliquad"
version = "2.1.0"
authors = ["QuantumBadger <speedy2d@redreader.org>"]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
description = """
Hardware-accelerated drawing of shapes, images, and text, with an easy to use
API. Speedy2D aims to be the simplest Rust API for creating a window, rendering graphics,
and handling input.
"""
keywords = ["opengl", "gamedev", "graphics", "font"]
categories = ["rendering::graphics-api", "game-development", "graphics"]
repository = "https://github.com/QuantumBadger/Speedy2D"
documentation = "https://docs.rs/speedy2d"

[lib]
doctest = false

[dependencies]
glam = {version = "0.21", features = ["scalar-math"] }
log = "0.4"
fontdue = "0.7"

[dependencies.miniquad]
version = "0.4.0"
features = ["log-impl"]

[dev-dependencies]
simple_logger = { version = "1.11", default-features = false, features = ["colors"] }

